# SearchDuplicateFiles

./: CMakeLists.txt  README.md  duplicate_search_exceptions.h  duplicate_searcher.cpp  duplicate_searcher.h  main.cpp
FileComparators/: crc32_file_comparator.cpp  crc32_file_comparator.h  empty_file_comparator.h  ifile_comparator.h  md5_file_comparator.cpp  md5_file_comparator.h
